# DoublePendulum

./: .gitignore  CMakeLists.txt
src/: Simulation.h  main.cc  smath.h
